--- a/CheckList/packages.config
+++ b/CheckList/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="datajs" version="0.0.3" />
+  <package id="jQuery" version="1.7.2" targetFramework="net40" />
 </packages>
