--- a/ChecklistUnitTests/CheckListUnitTests.csproj
+++ b/ChecklistUnitTests/CheckListUnitTests.csproj
@@ -32,10 +32,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FnsUtility">
-      <HintPath>..\..\..\..\..\..\src\fnsnet\bin\FnsUtility.dll</HintPath>
+      <HintPath>..\..\bin\FnsUtility.dll</HintPath>
     </Reference>
-    <Reference Include="MongoDB.Bson, Version=1.0.0.4098, Culture=neutral, PublicKeyToken=f686731cfb9cc103, processorArchitecture=MSIL" />
-    <Reference Include="MongoDB.Driver, Version=1.0.0.4098, Culture=neutral, PublicKeyToken=f686731cfb9cc103, processorArchitecture=MSIL" />
+    <Reference Include="MongoDB.Bson">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\MongoDB\CSharpDriver 1.5\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\MongoDB\CSharpDriver 1.5\MongoDB.Driver.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
